@@ -1,4 +1,4 @@
-Copyright 2011-2016 David Robillard <http://drobilla.net>
+Copyright 2011-2017 David Robillard <http://drobilla.net>
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
