@@ -56,9 +56,9 @@ copyright = u'2016, David Robillard'
 # built documents.
 #
 # The short X.Y version.
-version = '0.24.0'
+version = '0.24.2'
 # The full version, including alpha/beta/rc tags.
-release = '0.24.0'
+release = '0.24.2'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
